--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-registry=https://registry.npm.taobao.org/
+registry=https://registry.npm.taobao.org
 disturl=https://npm.taobao.org/dist
 chromedriver_cdnurl=https://npm.taobao.org/mirrors/chromedriver
 operadriver_cdnurl=https://npm.taobao.org/mirrors/operadriver
